Tidy up of index.html

--- a/index.html
+++ b/index.html
@@ -4,24 +4,21 @@
 	<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 	<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 	<head>
-	    <title>JnknFnk - Swansea's Leading Underground House Event</title>
-	    <meta charset="utf-8" />
-	    <meta http-equiv="content-language" content="en-GB" />
-	    <meta name="keywords"    content="" />
-	    <meta name="description" content="" />
-	    <meta name="robots" content="all, follow, index" />
+		<title>JnknFnk - Swansea's Leading Underground House Event</title>
+		<meta charset="utf-8" />
+		<meta http-equiv="content-language" content="en-GB" />
+		<meta name="keywords"    content="" />
+		<meta name="description" content="" />
+		<meta name="robots" content="all, follow, index" />
 
-	    <link rel="shortcut icon" href="/images/favicon.ico" />
+		<link rel="shortcut icon" href="/images/favicon.ico" />
+		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 
-	    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-	    <link rel="stylesheet" type="text/css" href="css/styles.css" />
-
-	     <script src="js/libs/modernizr.2.6.2.js"></script>
-
+		<script src="js/libs/modernizr.2.6.2.js"></script>
 	</head>
 
 	<body>
-
 		<section id="wrapper">
 			<header>
 				<a href="/"><img src="images/logo.png" alt="Jnknfnk logo" /></a>
@@ -35,93 +32,95 @@
 				</ul>
 			</header>
 
-			<section id="carousel">
-				    <div class="viewport">
-				        <ul class="overview">
-				        	<li style="background: url('images/banner-image3.jpg');">
-								<div>
-									<h1>Jamie Jones<br /> Hot Creations</h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lobortis est nec purus facilisis dapibus. Aenean lobortis egestas lorem, ut facilisis diam tincidunt sed.</p>
-									<span>Events</span>
-								</div>
-							</li>
-				            <li style="background: url('images/banner-image.jpg');">
-								<div>
-									<h1>Jnknfnk <br /> 3rd Birthday</h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lobortis est nec purus facilisis dapibus. Aenean lobortis egestas lorem, ut facilisis diam tincidunt sed.</p>
-									<span>Events</span>
-								</div>
-							</li>
-							<li style="background: url('images/banner-image2.jpg');">
-								<div>
-									<h1>Richie Hawtin <br /> The Plastikman</h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lobortis est nec purus facilisis dapibus. Aenean lobortis egestas lorem, ut facilisis diam tincidunt sed.</p>
-									<span>Events</span>
-								</div>
-							</li>
+		<!-- ********************************************************* Carousel Section ********************************************************* -->
 
-							        </ul>
-				    </div>
-				    <ul class="pager">
-				        <li><a rel="0" class="pagenum" href="#"></a></li>
-				        <li><a rel="1" class="pagenum" href="#"></a></li>
-				        <li><a rel="2" class="pagenum" href="#"></a></li>
-				    </ul>
-			</section>
-
-			<section id="content">
-				<ul class="social">
-					<li class="facebook">
-						<div class="fb-like" data-href="http://localhost:8888/jnknfnk2013/site_build/" data-send="false" data-width="310" data-show-faces="false" data-font="arial"></div>
+		<section id="carousel">
+			<div class="viewport">
+				<ul class="overview">
+					<li style="background: url('images/banner-image3.jpg');">
+						<div>
+							<h1>Jamie Jones<br /> Hot Creations</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lobortis est nec purus facilisis dapibus. Aenean lobortis egestas lorem, ut facilisis diam tincidunt sed.</p>
+							<span>Events</span>
+						</div>
 					</li>
-					<li class="twitter"></li>
-					<li class="filter" style="display:none;"></li>
+					<li style="background: url('images/banner-image.jpg');">
+						<div>
+							<h1>Jnknfnk <br /> 3rd Birthday</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lobortis est nec purus facilisis dapibus. Aenean lobortis egestas lorem, ut facilisis diam tincidunt sed.</p>
+							<span>Events</span>
+						</div>
+					</li>
+					<li style="background: url('images/banner-image2.jpg');">
+						<div>
+							<h1>Richie Hawtin <br /> The Plastikman</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lobortis est nec purus facilisis dapibus. Aenean lobortis egestas lorem, ut facilisis diam tincidunt sed.</p>
+							<span>Events</span>
+						</div>
+					</li>
 				</ul>
-				<!-- ********************************************************* Row One ********************************************************* -->
-				<div class="inner-content">
-					<div class="loading-container">
-						<span class="loading">Loading Content</span>
-					</div>
-				</div>
-				<button class="load-more">Load More</button>
-				<footer>
-					<small class="copyright"><strong>JNKNFNK</strong> - &copy; Copyright All rights reserved.</small>
-					<small class="author"><strong>Site Designed &amp; Built by</strong> <a href="http://www.hanger-designs.co.uk" title="Visit The site of Owain Llewellyn">Owain Llewellyn</a></small>
-				</footer>
-			</section>
+			</div>
+			<ul class="pager">
+				<li><a rel="0" class="pagenum" href="#"></a></li>
+				<li><a rel="1" class="pagenum" href="#"></a></li>
+				<li><a rel="2" class="pagenum" href="#"></a></li>
+			</ul>
 		</section>
-		<!-- Overlay -->
+
+		<!-- ********************************************************* Content Section ********************************************************* -->
+
+		<section id="content">
+			<ul class="social">
+				<li class="facebook">
+					<div class="fb-like" data-href="http://localhost:8888/jnknfnk2013/site_build/" data-send="false" data-width="310" data-show-faces="false" data-font="arial"></div>
+				</li>
+				<li class="twitter"></li>
+				<li class="filter" style="display:none;"></li>
+			</ul>
+
+			<!-- ********************************************************* Row One ********************************************************* -->
+
+			<div class="inner-content">
+				<div class="loading-container">
+					<span class="loading">Loading Content</span>
+				</div>
+			</div>
+			<button class="load-more">Load More</button>
+
+			<!-- ********************************************************* Footer ********************************************************* -->
+
+			<footer>
+				<small class="copyright"><strong>JNKNFNK</strong> - &copy; Copyright All rights reserved.</small>
+				<small class="author"><strong>Site Designed &amp; Built by</strong> <a href="http://www.hanger-designs.co.uk" title="Visit The site of Owain Llewellyn">Owain Llewellyn</a></small>
+			</footer>
+		</section>
+			</section>
+
+			<!-- ********************************************************* Overlay ********************************************************* -->
 			<section class="overlay-outer">
 				<article class="overlay-inner">
-
 					<span class="loading">Loading Content</span>
-
-						<span class="close"></span>
+					<span class="close"></span>
 					<div class="overlay-content-outer">
-
-
 						<section class="left-col">
-
 							<div class="overlay-content">
 								<time>2 Days Ago</time>
 								<h1></h1>
 								<ul class="social-post">
 									<li>
 										<iframe id="facebook"
-												src=""
-												scrolling="no"
-												frameborder="0"
-												allowtransparency="true"
-												style="border:none; overflow:hidden; width:375px; height: 25px; margin: 2px 0px 2px 0px">
+											src=""
+											scrolling="no"
+											frameborder="0"
+											allowtransparency="true"
+											style="border:none; overflow:hidden; width:375px; height: 25px; margin: 2px 0px 2px 0px">
 										</iframe>
 									</li>
 									<li class="twitter">
 										<a href="https://twitter.com/share" class="twitter-share-button" data-via="ilovejnk">Tweet</a>
 									</li>
 								</ul>
-								<article class="body-content">
-
-								</article>
+								<article class="body-content"></article>
 							</div>
 							<div class="fb-comments-placeholder"></div>";
 						</section>
@@ -143,26 +142,25 @@
 							</section>
 						</aside>
 					</div>
-				</article>
-			</section>
+			</article>
+		</section>
 
-
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-	<script src="js/libs/carousel.js"></script>
-	<script src="js/global.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<script src="js/views/view-posts.js"></script>
-	<script src="js/overlay.js"></script>
-	<script src="js/utils.js"></script>
-	<script src="js/twitter.js"></script>
-	<script src="js/views/view-post.js"></script>
-	<script src="js/views/view-author.js"></script>
-	<script src="js/views/view-image.js"></script>
-	<script src="js/header.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script src="js/libs/carousel.js"></script>
+		<script src="js/global.js"></script>
+		<script src="js/bootstrap.js"></script>
+		<script src="js/views/view-posts.js"></script>
+		<script src="js/overlay.js"></script>
+		<script src="js/utils.js"></script>
+		<script src="js/twitter.js"></script>
+		<script src="js/views/view-post.js"></script>
+		<script src="js/views/view-author.js"></script>
+		<script src="js/views/view-image.js"></script>
+		<script src="js/header.js"></script>
 
 		<!-- Facebook Like Stuff -->
 		<div id="fb-root"></div>
 		<script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=216741408458626"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
-	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 	</body>
 </html>
